## v0.5.6

* Corrected the instances command so it returns all instances
* Updated the clone command so it can take a new template for the new stack
* Added region to the message notifications
* Fixed deployments so they don't try to deploy if the attributes fail to update

## v0.5.5

* Added backoff functionality to updates so they work better with the force option
* Now publishes a message when the deployment starts

## v0.5.4

* Added support for internal networking to the deploy and instances commands
* Added backoff functionality to deployments so they work better with the force option

## v0.5.3

* Added a clone command that clones a stack
* Updated the protect command so it allows multiple stacks
* Updated the instances command so it tells the user when the stack does not exist
* Updated the outputs command to make the output values easier to read

## v0.5.2

* Upgrade to stackster 0.3.0
* Corrected handling of attributes on stack creation

## v0.5.1:

* Corrected the use of the domain attribute in URLs during deployments
* Corrected the use of the force option during deployments
* Added help text on SSH usage to the deploy command
* Corrected the acceptable options for the protect command

## v0.5.0:

* Updated the update command so it accepts a force option
* Refactored deployments to read bucket_prefix and domain from attributes instead of the yaml file
* Added a protect command that allows users to toggle whether stacks should be protected from destroy calls
* Refactored the deployment locking logic
* Corrected the destroy command so it no longer creates a deployment
* Gracefully exit if the .simple_deploy.yml file is missing or corrupt
* Corrected the update command so it now checks the deployment lock at the beginning of the process

## v0.4.8:

* Added as_command_args option to attributes cli

## v0.4.7:

* Added specs
* Updated deployment to set primary host properly in classic
* Updated ssh to return classic commands properly

## v0.4.6:
